--- a/style.css
+++ b/style.css
@@ -4,3 +4,18 @@
     margin-right: auto;
     width: 10%;
 }
+#abbrviation_tag{
+    text-align: center;
+    color: blueviolet;
+}
+#background_colorpractice{
+    color: green;
+    background-color: yellow;
+    width: 100%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+}
+span{
+    color: gold;
+}
