--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@ span {
     border-radius: 20px;
     margin: 1%;
     width: 30%;
-    float: left;
+    /* float: left; */
     display: inline-block;
 }
