--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body{
     /* margin: 40px; */
-    margin-top: 40px;
+    /* margin-top: 40px;
     margin-right: 40px;
-    margin-left: 40px;
-    border: 10px solid orange;
+    margin-left: 40px; */
+    /* border: 10px solid orange; */
     border-radius: 5px;
     background-color: aliceblue;
+
+    box-shadow: 10px 10px 80px purple;
+    border: 4px solid white;
+    margin: 100px 100px 100px 100px;
+    text-align: center;
+    text-transform: capitalize;
     
 }
 #img_w3logo {
@@ -71,4 +77,64 @@ span {
     width: 30%;
     /* float: left; */
     display: inline-block;
+}
+#button_one{
+    text-decoration: none;
+    background-image: linear-gradient(45 deg, lightsalmon, tomato);
+    padding: 10px;
+    border-radius: 15px;
+    color: rgb(0, 94, 11);
+    font-weight: 700;
+}
+#box_shadow_hover:hover {
+    box-shadow: 10px 10px 40px purple;
+    border: 4px solid white;
+    border-radius: 10px;
+    margin: 10px 400px;
+    text-align: center;
+    text-transform: capitalize;
+    /* height: 80%; */
+}
+#Pseudo_hover:hover{
+    color: indianred;
+    font-size: 60px;
+    background-color: lawngreen;
+    /* width: 60px; */
+}
+/* #input_focus_pseudoclass:focus{
+    color: green;   
+} */
+li:first-child {
+    background-color: purple;
+    
+}
+li:nth-child(2n){
+    background-color: green;
+}
+#pseudoclass_anchor_link_tag:visited{
+    color: aqua;
+    /* class ola tag gulo hobe. id ola na. */
+}
+a{
+    text-decoration: none;
+}
+#helloElement::before{
+    content: "(Pseudo element::before) ";
+    color: burlywood;
+    /* font-size: 40px; */
+    background-color: gold;
+    /* content: #128520; */
+}
+#helloElement::after{
+    content: " (😡 Pseudo element::after)";
+    background-color: gold;
+}
+/* #position_relative{
+    position: relative;
+}
+#position_relative{
+    position: absolute;
+} */
+#important_priority{
+    color: green !important;
 }
