--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
 
     box-shadow: 10px 10px 80px purple;
     border: 4px solid white;
-    margin: 100px 100px 100px 100px;
+    /* margin: 100px 100px 100px 100px; */
+    margin: 20px;
     text-align: center;
     text-transform: capitalize;
     
